bug: fix image bleed beyond container

--- a/src/scss/component.article.scss
+++ b/src/scss/component.article.scss
@@ -29,6 +29,8 @@
         background: $colour-grey;
 
         * {
+            max-width: 100%;
+            height: auto;
             margin: 0;
         }
     }
